<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SMHITimeseries" Id="{cc3b7583-36d1-474a-b70d-7394fefeef10}">
    <Declaration><![CDATA[TYPE ST_SMHITimeseries :
STRUCT
	validTime: DATE_AND_TIME;
	parameters: ARRAY[0..18] OF ST_vaederdata;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>